--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@pnp/nodejs": "^4.5.0",
     "@pnp/odata": "^2.15.0",
     "@pnp/sp": "^4.5.0",
+    "@pnp/spfx-controls-react": "^3.19.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "tslib": "2.3.1"
