--- a/config/config.json
+++ b/config/config.json
@@ -97,6 +97,14 @@
           "manifest": "./src/webparts/webPartShowList/WebPartShowListWebPart.manifest.json"
         }
       ]
+    },
+    "show-list-item-html-web-part": {
+      "components": [
+        {
+          "entrypoint": "./lib/webparts/showListItemHtml/ShowListItemHtmlWebPart.js",
+          "manifest": "./src/webparts/showListItemHtml/ShowListItemHtmlWebPart.manifest.json"
+        }
+      ]
     }
   },
   "externals": {},
@@ -113,6 +121,7 @@
     "ControlStrings": "node_modules/@pnp/spfx-controls-react/lib/loc/{locale}.js",
     "PnPjsCrudDemoWebPartStrings": "lib/webparts/pnPjsCrudDemo/loc/{locale}.js",
     "PnPjsCrudDemo2TrasPorteFuncaoWebPartStrings": "lib/webparts/pnPjsCrudDemo2TrasPorteFuncao/loc/{locale}.js",
-    "WebPartShowListWebPartStrings": "lib/webparts/webPartShowList/loc/{locale}.js"
+    "WebPartShowListWebPartStrings": "lib/webparts/webPartShowList/loc/{locale}.js",
+    "ShowListItemHtmlWebPartStrings": "lib/webparts/showListItemHtml/loc/{locale}.js"
   }
 }
